@@ -200,6 +200,9 @@ Release 2.5.0 - UNRELEASED
 
     HADOOP-10622. Shell.runCommand can deadlock (Gera Shegalov via jlowe)
 
+    HADOOP-10686. Writables are not always configured. 
+    (Abraham Elmahrek via kasha)
+
   BREAKDOWN OF HADOOP-10514 SUBTASKS AND RELATED JIRAS
 
     HADOOP-10520. Extended attributes definition and FileSystem APIs for
